java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateFieldMethod2-hints.pass
Create Field t in org.netbeans.test.java.hints.CreateFieldMethod2
Create Parameter t
Create Local Variable t
